objects/PA_BU_Admin_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Key_Field__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Approver Role 1</fullName>
                </value>
                <value>
                    <fullName>Approver Role 2</fullName>
                </value>
                <value>
                    <fullName>Approver Role 3</fullName>
                </value>
                <value>
                    <fullName>Approver Role 4</fullName>
                </value>
                <value>
                    <fullName>Approver Role 5</fullName>
                </value>
                <value>
                    <fullName>Approver Role 6</fullName>
                </value>
                <value>
                    <fullName>Approver Role 7</fullName>
                </value>
                <value>
                    <fullName>Approver Role 8</fullName>
                </value>
                <value>
                    <fullName>Approver Role 9</fullName>
                </value>
                <value>
                    <fullName>Approver Role 10</fullName>
                </value>
                <value>
                    <fullName>Approver Role 11</fullName>
                </value>
                <value>
                    <fullName>Approver Role 12</fullName>
                </value>
                <value>
                    <fullName>Approver Role 13</fullName>
                </value>
                <value>
                    <fullName>Approver Role 14</fullName>
                </value>
                <value>
                    <fullName>Approver Role 15</fullName>
                </value>
                <value>
                    <fullName>Approver Role 16</fullName>
                </value>
                <value>
                    <fullName>Final Approver 1</fullName>
                </value>
                <value>
                    <fullName>Final Approver 2</fullName>
                </value>
                <value>
                    <fullName>Final Approver 3</fullName>
                </value>
                <value>
                    <fullName>Global Product Line Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Business Leader</fullName>
                </value>
                <value>
                    <fullName>Regional Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Requester&apos;s Approver</fullName>
                </value>
                <value>
                    <fullName>Approver Role 17</fullName>
                </value>
                <value>
                    <fullName>Approver Role 18</fullName>
                </value>
                <value>
                    <fullName>Approver Role 19</fullName>
                </value>
                <value>
                    <fullName>Approver Role 20</fullName>
                </value>
                <value>
                    <fullName>Approver Role 21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Field__c</fullName>
        <label>Key Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Segment</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Sales Office</fullName>
                </value>
                <value>
                    <fullName>Sales Org</fullName>
                </value>
                <value>
                    <fullName>End Use</fullName>
                </value>
                <value>
                    <fullName>Requester</fullName>
                </value>
                <value>
                    <fullName>Customer Group 2</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>PH2</fullName>
                </value>
                <value>
                    <fullName>PH3</fullName>
                </value>
                <value>
                    <fullName>PH4</fullName>
                </value>
                <value>
                    <fullName>PH5</fullName>
                </value>
                <value>
                    <fullName>PH6</fullName>
                </value>
                <value>
                    <fullName>PH7</fullName>
                </value>
                <value>
                    <fullName>PH8</fullName>
                </value>
                <value>
                    <fullName>PH9</fullName>
                </value>
                <value>
                    <fullName>FRB4</fullName>
                </value>
                <value>
                    <fullName>FRB5</fullName>
                </value>
                <value>
                    <fullName>FRB6</fullName>
                </value>
                <value>
                    <fullName>FRB7</fullName>
                </value>
                <value>
                    <fullName>FRB8</fullName>
                </value>
                <value>
                    <fullName>FRB9</fullName>
                </value>
                <value>
                    <fullName>FRB10</fullName>
                </value>
                <value>
                    <fullName>Reason Code</fullName>
                </value>
                <value>
                    <fullName>Sales Reduction</fullName>
                </value>
                <value>
                    <fullName>Customer Group 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PA_BU_Admin_Master__c</fullName>
        <label>Approval Process Header</label>
        <referenceTo>PA_BU_Admin_Master__c</referenceTo>
        <relationshipLabel>Approval Process Steps</relationshipLabel>
        <relationshipName>PA_BU_Admin_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Routing_Parameter__c</fullName>
        <label>Routing Parameter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below Floor Price</fullName>
                    <default>true</default>
                    <label>Below Floor Price</label>
                </value>
                <value>
                    <fullName>Below Reference Price</fullName>
                </value>
                <value>
                    <fullName>Below Current Price</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>&gt; or = 51kg AND &lt; or = 500kg</fullName>
                </value>
                <value>
                    <fullName>&gt;500kg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Process Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PA_BU_Admin_Master__c</columns>
        <columns>NAME</columns>
        <columns>Approval_Level__c</columns>
        <columns>Approver_Role__c</columns>
        <columns>Key_Field__c</columns>
        <columns>Routing_Parameter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_SM</fullName>
        <columns>PA_BU_Admin_Master__c</columns>
        <columns>NAME</columns>
        <columns>Approval_Level__c</columns>
        <columns>Approver_Role__c</columns>
        <columns>Key_Field__c</columns>
        <columns>Routing_Parameter__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All-SM</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Approver Process Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>